HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiSafeRecordWithoutLayoutC/Expected.uv
//! Expected diagnostic metadata for the FfiSafeRecordWithoutLayoutC rejected-source specimen.

expectedDiagnostic("E-TYP-2624", "rule.23.FfiSafe-Record-LayoutC-Err")
